# rs-async-debug

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
crates/async-debug-derive/: Cargo.toml  Makefile  README.md
crates/async-debug-derive/src/: common.rs  enums.rs  fields.rs  lib.rs  struct_named.rs  tests.rs  zip_result.rs
crates/async-debug-derive/src/enums/: mod.rs  named.rs  unnamed.rs
crates/async-debug-derive/src/structs/: mod.rs  named.rs  unnamed.rs
crates/async-debug-derive/tests/goldenfiles/: test_attr_async_call.rs  test_attr_clone.rs  test_attr_copy.rs  test_attr_ty.rs  test_disable_derive_debug.rs  test_no_attrs.rs  test_skip.rs
src/: lib.rs
tests/: test_works.rs  ui.rs  version_sync.rs
tests/ui/: Cargo.toml
tests/ui/fail/: enum.rs  enum.stderr  exclusive_clone_copy.rs  exclusive_clone_copy.stderr  multi_error.rs  multi_error.stderr  struct_unit.rs  struct_unit.stderr  struct_unnamed.rs  struct_unnamed.stderr  union.rs  union.stderr
tests/ui/pass/: enum_named.rs  enum_unnamed.rs  rust_debug.rs  rust_generics.rs  skip.rs  struct_named.rs  struct_named_generics.rs  struct_unnamed.rs  vis_super.rs
