[package]
name = "async-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-debug-derive = { path = "crates/async-debug-derive" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
