[package]
name = "async-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-debug-derive = { path = "crates/async-debug-derive" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
trybuild = "1.0"

[workspace]
members = [
  ".",
  "crates/async-debug-derive",
  # "tests/ui",
  ]
default-members = [
  ".",
  "crates/async-debug-derive",
  ]
